k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-crawler-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-crawler-web
  template:
    metadata:
      labels:
        app: slack-crawler-web
    spec:
      containers:
        - name: app
          image: gabbersepp/slack-crawler-web
          volumeMounts:
          - mountPath: /usr/share/nginx/html/config
            name: sambashare
            subPath: slack-crawler/config
          ports:
          - containerPort: 80
        - name: api
          image: gabbersepp/slack-crawler-api
          ports:
          - containerPort: 8081
          volumeMounts:
          - mountPath: /server/config
            name: sambashare
            subPath: slack-crawler/config
      volumes:
      - name: sambashare
        flexVolume:
          driver: "fstab/cifs"
          fsType: "cifs"
          secretRef:
            name: "cifs-secret"
          options:
            networkPath: "//192.168.2.126/sambashare"
            mountOptions: "uid=0"
            

---
apiVersion: v1
kind: Service
metadata:
  name: slack-crawler-client
spec:
  type: ClusterIP
  selector:
    app: slack-crawler-web
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: api
    port: 8081
    targetPort: 8081

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slack-crawler-client
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
        rewrite /api/(.+)$ /$1 break;  
    nginx.ingress.kubernetes.io/whitelist-source-range:  192.168.2.0/24
spec:
  rules:
  - host: slack.h5b.de
    http:
      paths:
      - path: /api/
        backend: 
          serviceName: slack-crawler-client
          servicePort: api
      - path: /
        backend:
          serviceName: slack-crawler-client
          servicePort: web
